프로젝트 구조 세팅 및 테스트 코드 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,10 @@
 spring.application.name=tutoring
 
 server.port=8787
+#server.port=8080
+spring.profiles.active=dev
+
+
+logging.level.root=info
+logging.level.org.springframework=info
+logging.level.com.example.tutoring=debug
