--- a/pom.xml
+++ b/pom.xml
@@ -88,7 +88,12 @@
 			<scope>runtime</scope>
 		</dependency>
 		
-		
+		<dependency>
+		    <groupId>org.springframework.cloud</groupId>
+		    <artifactId>spring-cloud-starter-aws</artifactId>
+		    <version>2.2.6.RELEASE</version>
+		</dependency>
+
 		
 	</dependencies>
 
