--- a/pom.xml
+++ b/pom.xml
@@ -133,6 +133,13 @@
 			<version>3.21.0</version>
 			<scope>test</scope>
 		</dependency>
+		
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-oauth2-client</artifactId>
+		    <version>3.3.4</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
