Feat | 회원 탈퇴 구현

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=tutoring
 
 server.port=8787
 
-spring.profiles.active=dev
+spring.profiles.active=local
 
 logging.level.root=info
 logging.level.org.springframework=info
