--- a/pom.xml
+++ b/pom.xml
@@ -139,6 +139,22 @@
 		    <artifactId>spring-boot-starter-oauth2-client</artifactId>
 		    <version>3.3.4</version>
 		</dependency>
+		
+		<!-- WebSocket 관련 의존성 추가-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-websocket</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.tomcat.embed</groupId>
+			<artifactId>tomcat-embed-websocket</artifactId>
+		</dependency>
 
 	</dependencies>
 
