--- a/pom.xml
+++ b/pom.xml
@@ -160,6 +160,12 @@
 	        <groupId>org.springframework.boot</groupId>
 	        <artifactId>spring-boot-starter-data-redis</artifactId>
     	</dependency>
+    	
+    	 <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20240303</version>
+        </dependency>
 		
 	</dependencies>
 
